# cheri-dwarf-scanner

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  bit_flag_enum.hh  dwarf_scraper.cc  log.cc  log.hh  scraper.cc  scraper.hh  storage.cc  storage.hh  struct_layout_scraper.cc  struct_layout_scraper.hh  utils.hh
src/: CMakeLists.txt  bit_flag_enum.hh  dwarf_scraper.cc  flat_layout_scraper.cc  flat_layout_scraper.hh  global_sym_scraper.cc  log.cc  log.hh  pool.hh  scraper.cc  scraper.hh  storage.cc  storage.hh  struct_layout_scraper.cc  struct_layout_scraper.hh  utils.hh
tests/: CMakeLists.txt  fixture.hh  test_bitfields.cc  test_imprecise_detection.cc  test_padding.cc  test_precision.cc  test_vla.cc
tests/assets/: Makefile  sample_bitfields  sample_bitfields.c  sample_imprecise_member  sample_imprecise_member.c  sample_nested_struct_vla  sample_nested_struct_vla.c  sample_padding  sample_padding.c  sample_struct_vla  sample_struct_vla.c  sample_union_vla  sample_union_vla.c
